# gavin-db

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ]  flake.nix  ~
src/: main.cpp  shell.cpp
src/binder/: binder.cpp
src/binder/statement/: create_statement.cpp  insert_statement.cpp  select_statement.cpp
src/buffer/: buffer_pool_manager.cpp  random_replacer.cpp
src/catalog/: catalog.cpp  catalog_manager.cpp  column.cpp  schema.cpp
src/common/: db_instance.cpp  debug.cpp  value.cpp
src/execution/: executor_factory.cpp
src/execution/executors/: insert_executor.cpp  seq_scan_executor.cpp  value_executor.cpp
src/execution/plans/: projection_executor.cpp
src/include/binder/: binder.hpp
src/include/binder/expressions/: bound_binary_op.hpp  bound_columnn_ref.hpp  bound_constant.hpp  bound_expression.hpp  bound_star.hpp
src/include/binder/statement/: bound_statement.hpp  create_statement.hpp  insert_statement.hpp  select_statement.hpp  statement_type.hpp
src/include/binder/table_ref/: bound_base_table_ref.hpp  bound_expression_list.hpp  bound_table_ref.hpp
src/include/buffer/: buffer_pool_manager.hpp  random_replacer.h  replacer.hpp
src/include/catalog/: catalog.hpp  catalog_manager.hpp  column.hpp  schema.hpp
src/include/common/: arithmetic_type.hpp  config.hpp  db_instance.h  db_instance.hpp  debug.hpp  exception.hpp  fs_utils.hpp  logger.hpp  macros.hpp  page_id.hpp  rid.hpp  rwlatch.hpp  test_utils.hpp  type.hpp  typedef.hpp  value.hpp
src/include/concurrency/: transaction.hpp  transaction_manager.hpp  watermark.hpp
src/include/execution/: execution_engine.hpp  executor_context.hpp  executor_factory.hpp
src/include/execution/executors/: abstract_executor.hpp  insert_executor.hpp  seq_scan_executor.hpp  value_executor.hpp
src/include/execution/expressions/: abstract_expression.hpp  arithmetic_expression.hpp  arithmetic_expressions.hpp  column_value_expression.hpp  constant_value_expression.hpp
src/include/execution/plans/: abstract_plan.hpp  insert_plan.hpp  projection_plan.hpp  seq_scan_plan.hpp  values_plan.hpp
src/include/index/: bplus_tree_index.hpp  btree_index.hpp  index.hpp  index_typdef.hpp
src/include/meta/: catalog.hpp  catalog_manager.hpp  column.hpp  schema.hpp
src/include/parser/: parser.hpp
src/include/planner/: planner.hpp
src/include/query/: execution_engine.hpp  executor_context.hpp  executor_factory.hpp  planner.hpp  query_builder.hpp
src/include/query/binder/: binder.hpp
src/include/query/binder/expressions/: bound_binary_op.hpp  bound_columnn_ref.hpp  bound_constant.hpp  bound_expression.hpp  bound_star.hpp
src/include/query/binder/statement/: bound_statement.hpp  create_statement.hpp  insert_statement.hpp  select_statement.hpp  statement_type.hpp
src/include/query/binder/table_ref/: bound_base_table_ref.hpp  bound_expression_list.hpp
src/include/query/executors/: abstract_executor.hpp  insert_executor.hpp  seq_scan_executor.hpp  value_executor.hpp
src/include/query/expressions/: abstract_expression.hpp  arithmetic_expression.hpp  column_value_expression.hpp  constant_value_expression.hpp
src/include/query/plans/: abstract_plan.hpp  insert_plan.hpp  projection_plan.hpp  seq_scan_plan.hpp  values_plan.hpp
src/include/storage/: catalog_page.hpp  disk.hpp  disk_manager.hpp  file_path_manager.hpp  kv_page.hpp  page.hpp  page_allocator.hpp  page_gaurd.hpp  page_guard.hpp  table_heap.hpp  table_info.hpp  table_info_page.hpp  table_page.hpp  tuple.hpp  tuple_page.hpp
src/include/storage/buffer/: buffer_pool.hpp  buffer_pool_manager.hpp  random_replacer.h  replacer.hpp
src/include/storage/index/: index.hpp
src/include/storage/page/: btree_header_page.hpp  btree_internal_page.hpp  btree_leaf_page.hpp  btree_page.hpp  kv_page.hpp  page.hpp  page_guard.hpp  table_info_page.hpp  table_page.hpp
src/include/storage/serializer/: binary_deserializer.hpp  binary_serializer.hpp  deserializer.hpp  file_stream.hpp  memory_stream.hpp  read_stream.hpp  serialization_traits.hpp  serializer.hpp  write_stream.hpp
src/include/storage/table/: table_heap.hpp  table_info.hpp  table_iterator.hpp  table_meta.hpp  tuple.hpp
src/include/type/: type_id.hpp
src/meta/: catalog.cpp  catalog_manager.cpp  column.cpp  schema.cpp
src/parser/: parser.cpp
src/planner/: planner.cpp
src/query/: executor_factory.cpp  planner.cpp
src/query/binder/: binder.cpp
src/query/binder/statement/: create_statement.cpp  insert_statement.cpp  select_statement.cpp
src/query/executors/: insert_executor.cpp  seq_scan_executor.cpp  value_executor.cpp
src/query/plans/: projection_executor.cpp
src/storage/: catalog_page.cpp  disk.cpp  disk_manager.cpp  kv_page.cpp  page_guard.cpp  table_heap.cpp  table_info_page.cpp  table_page.cpp  tuple.cpp
src/storage/buffer/: buffer_pool.cpp  buffer_pool_manager.cpp  random_replacer.cpp
src/storage/page/: kv_page.cpp  page_guard.cpp  table_page.cpp
src/storage/serializer/: binary_deserializer.cpp  binary_serializer.cpp  file_stream.cpp  memory_stream.cpp
src/storage/table/: table_heap.cpp  table_iterator.cpp  tuple.cpp
test/: CMakeLists.txt
test/concurrency/: concurrency_test.cpp
test/execution/: execution_test.cpp
test/index/: index_test.cpp
test/query/: query_test.cpp
test/storage/: persistence_test.cpp  serializer_test.cpp  table_heap_persistence_test.cpp  table_heap_test.cpp  table_info_page_test.cpp  table_page_test.cpp  tuple_test.cpp
